--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+h3 {
+    font-size: 30px;
+}
+
 div#game {
     display: flex;
     flex-direction: column;
